--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  html {
+    @apply h-full w-full;
+    scroll-padding-top: 5rem;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply min-h-full text-white font-sans selection:text-white selection:bg-secondary;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    text-rendering: optimizelegibility;
+    & span::selection {
+      -webkit-text-fill-color: #ffffff;
+      @apply bg-secondary;
+    }
+    background-color: theme("colors.primary");
+  }
+  html {
+    @apply text-15;
+  }
+  @screen 2xl {
+    html {
+      @apply text-17;
+    }
+  }
+  .container {
+    @apply mx-auto w-full max-w-container px-4;
+  }
 }
