--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
     scroll-padding-top: 5rem;
   }
   body {
-    @apply min-h-full font-sans selection:text-white selection:bg-secondary;
+    @apply min-h-full font-sans text-gray-dark selection:text-white selection:bg-secondary;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     text-rendering: optimizelegibility;
